--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div>
+  <%= form.label :password_confirmation, style: "display: block" %>
+  <%= form.text_field :password_confirmation %>
+</div>
+
+  <div>
     <%= form.label :email, style: "display: block" %>
     <%= form.text_field :email %>
   </div>
