--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,4 +7,8 @@
   <%= link_to "Back to users", users_path %>
 
   <%= button_to "Destroy this user", @user, method: :delete %>
+
+  <% if logged_in? %>
+    <%= link_to 'Logout', logout_path, method: :delete %>
+  <% end %>
 </div>
