Add `dependent: :destroy` in User model to delete user and associated member.
Display selected group name in users list.

Use collection_select method of Action View.

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -5,6 +5,11 @@
   </p>
 
   <p>
+    <strong>Group:</strong>
+    <%= user.selected_group_id.nil? ? "未設定" : Group.find(user.selected_group_id).name %>
+  </p>
+
+  <p>
     <strong>Password:</strong>
     <%= user.password %>
   </p>
