--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,19 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @user %>
+<p>
+  <strong>Name:</strong>
+  <%= @user.name %>
+</p>
+
+<p>
+  <strong>Group:</strong>
+  <%= @user.selected_group_id.nil? ? "未設定" : Group.find(@user.selected_group_id).name %>
+</p>
+
+<p>
+  <strong>Email:</strong>
+  <%= @user.email %>
+</p>
 
 <div>
   <%= link_to "Edit this user", edit_user_path(@user) %> |
