Modify view and partial file of Group.

--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -1,7 +1,5 @@
-<div id="<%= dom_id group %>">
-  <p>
-    <strong>Name:</strong>
-    <%= group.name %>
-  </p>
-
-</div>
+<tr>
+  <td><%= group.name %></td>
+  <td><%= link_to "Show", group %></td>
+  <td><%= link_to 'Edit', group %></td>
+</tr>
