--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -1,5 +1,5 @@
 <tr>
   <td><%= group.name %></td>
   <td><%= link_to "Show", group %></td>
-  <td><%= link_to 'Edit', group %></td>
+  <td><%= link_to 'Edit', edit_group_path(group) %></td>
 </tr>
