--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,6 +1,8 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @group %>
+<div>
+  <p><strong>Name:</strong> <%= @group.name %></p>
+</div>
 
 <div>
   <%= link_to "Edit this group", edit_group_path(@group) %> |
