--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -5,6 +5,6 @@
     <%= user.selected_group_id.nil? ? "未設定" : Group.find(user.selected_group_id).name %>
   </td>
   <td><%= link_to "Show", user %></td>
-  <td><%= link_to 'Edit', user %></td>
+  <td><%= link_to 'Edit', edit_user_path(user) %></td>
   <td><%= link_to 'Destroy', user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
 </tr>
