--- a/app/views/stores/_store.html.erb
+++ b/app/views/stores/_store.html.erb
@@ -1,7 +1,6 @@
-<div id="<%= dom_id store %>">
-  <p>
-    <strong>Name:</strong>
-    <%= store.name %>
-  </p>
-
-</div>
+<tr>
+  <td><%= store.name %></td>
+  <td><%= link_to "Show", store %></td>
+  <td><%= link_to 'Edit', edit_store_path(store) %></td>
+  <td><%= link_to 'Destroy', store_path(store), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+</tr>
