--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,6 +1,9 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @store %>
+<p>
+  <strong>Name:</strong>
+  <%= @store.name %>
+</p>
 
 <div>
   <%= link_to "Edit this store", edit_store_path(@store) %> |
