--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -3,12 +3,19 @@
 <h1>Stores</h1>
 
 <div id="stores">
-  <% @stores.each do |store| %>
-    <%= render store %>
-    <p>
-      <%= link_to "Show this store", store %>
-    </p>
-  <% end %>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th colspan="3"></th>
+      </tr>
+      <tbody>
+        <% @stores.each do |store| %>
+          <%= render store %>
+        <% end %>
+      </tbody>
+    </thead>
+  </table>
 </div>
 
 <%= link_to "New store", new_store_path %>
