--- a/app/views/toys/index.html.erb
+++ b/app/views/toys/index.html.erb
@@ -3,12 +3,20 @@
 <h1>Toys</h1>
 
 <div id="toys">
-  <% @toys.each do |toy| %>
-    <%= render toy %>
-    <p>
-      <%= link_to "Show this toy", toy %>
-    </p>
-  <% end %>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Store</th>
+        <th colspan="3"></th>
+      </tr>
+      <tbody>
+        <% @toys.each do |toy| %>
+          <%= render toy %>
+        <% end %>
+      </tbody>
+    </thead>
+  </table>
 </div>
 
 <%= link_to "New toy", new_toy_path %>
