Set select box to choose a maker in Toy view page.

--- a/app/views/toys/_form.html.erb
+++ b/app/views/toys/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.collection_select :selected_store_id, Store.all, :id, :name, prompt: '選択してください' %>
   </div>
 
+  <div>
+    <%= form.label :maker, style: "display: block" %>
+    <%= form.collection_select :selected_maker_id, Maker.all, :id, :name, prompt: '選択してください' %>
+  </div>
+
   <%#
     FIXME: The following error occurred if I don't give buyable_id and buyable_type as a form. 
       - Mysql2::Error: Column 'buyable_type' cannot be null
