--- a/app/views/toys/index.html.erb
+++ b/app/views/toys/index.html.erb
@@ -8,6 +8,7 @@
       <tr>
         <th>Name</th>
         <th>Store</th>
+        <th>Maker</th>
         <th colspan="3"></th>
       </tr>
       <tbody>
