Add logic to bookmark a toy as a member's favorite.

--- a/app/views/toys/_toy.html.erb
+++ b/app/views/toys/_toy.html.erb
@@ -14,6 +14,7 @@
     <%= link_to Maker.find(toy.selected_maker_id).name, maker_path(Maker.find(toy.selected_maker_id)) %>
   <% end %>
   </td>
+  <td><%= link_to "Bookmark", bookmark_toy_path(toy) %></td>
   <td><%= link_to "Show", toy %></td>
   <td><%= link_to 'Edit', edit_toy_path(toy) %></td>
   <td><%= link_to 'Destroy', toy_path(toy), method: :delete, data: { confirm: 'Are you sure?' } %></td>
