--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,3 +1,24 @@
 <h1>Member Page</h1>
 
 <p>Hello, <%= current_user.name %></p>
+
+<hr>
+<h3>Your Favorites List</h3>
+<div id="favorites">
+  <table border="1">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Store</th>
+      </tr>
+      <tbody>
+        <% @favorites.each do |favorite| %>
+          <tr>
+            <td><%= favorite.toy_name %></td>
+            <td><%= favorite.store_name %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </thead>
+  </table>
+</div>
