--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -23,7 +23,7 @@
     </thead>
   </table>
 </div>
-<h4>Sort by name only "Store1":</h4>
+<h4>Sort by Store Maker Name (excluding "未設定"):</h4>
 <div id="favorites">
   <table border="1">
     <thead>
@@ -32,7 +32,7 @@
         <th>Store</th>
       </tr>
       <tbody>
-        <% @favorites_by_store_name_only_store1.each do |favorite| %>
+        <% @favorites_by_store_maker_name_unset.each do |favorite| %>
           <tr>
             <td><%= favorite.toy_name %></td>
             <td><%= favorite.store_name %></td>
