`ja` is set to i18n.default_locale.
Apply ja.time.formats.default to registration date.

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -21,7 +21,7 @@
             <td><%= favorite.id %></td>
             <td><%= favorite.toy_name %></td>
             <td><%= favorite.toy_maker_name %></td>
-            <td><%= favorite.created_at %></td>
+            <td><%= l favorite.created_at %></td>
           </tr>
         <% end %>
       </tbody>
@@ -44,7 +44,7 @@
             <td><%= favorite.id %></td>
             <td><%= favorite.store_toy_maker.store_name %></td>
             <td><%= favorite.store_toy_maker.toy_maker %></td>
-            <td><%= favorite.created_at %></td>
+            <td><%= l favorite.created_at %></td>
           </tr>
         <% end %>
       </tbody>
