--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -4,7 +4,7 @@
 
 <hr>
 <h3>Favorites List</h3>
-<span>※ Sort by created_at in ascending order excluding "未設定".</span>
+<span>※ Sort by registration date in ascending order excluding "未設定".</span>
 <h4>Toys</h4>
 <div>
   <table border="1">
